--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
   <!-- <script src="assets/vendor/jquery/jquery-3.6.0.js"></script> -->
   <!-- =======================================================
   * WebPage Name: Personal - v4.7.0
-  * WebPage URL: https://bootstrapmade.com/personal-free-resume-bootstrap-WebPage/
+  * Thanks to Bootstrap Templates !
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
 
@@ -92,7 +91,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>MERN Stack Developer &amp; Web Designer</h3>
           <p class="fst-italic">
-            Trained from Kerala's Leading Training Platform BrotoType !
+            At the dawn of Open Material Education !
           </p>
           <div class="row">
             <div class="col-lg-6">
