--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Muzammil Hamza</a></h1>
+      <h1><a href="/">Muzammil Hamza</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>Full Stack <span> Developer</span> </h2>
@@ -59,6 +59,15 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
+
+      <div id="navbar" class="customNav">
+        <a href="#header" class="nav-link active"><i class="bi bi-house-fill"></i></a>
+        <a href="#about" class="nav-link"> <i class="bi bi-file-person-fill"></i> </a>
+        <a href="#resume" class="nav-link"><i class="bi bi-sliders"></i></a>
+        <a href="#services" class="nav-link"><i class="bi-briefcase-fill"></i></a>
+        <a href="#portfolio" class="nav-link"><i class="bi-archive-fill"></i></a>
+        <a href="#contact" class="nav-link"><i class="bi-envelope-open-fill"></i></a>
+      </div>
 
       <div class="social-links">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -322,7 +331,7 @@
     <div class="interests container">
 
       <div class="section-title">
-        <h2>Hobbies</h2>
+        <h2>Interests</h2>
       </div>
 
       <div class="row">
@@ -873,9 +882,9 @@
           <input id="honeypot" hidden type="text" name="honeypot" value="" />
         </div>
         <div class="form-group my-3">
-          <grammarly-editor-plugin>
+          <!-- <grammarly-editor-plugin> -->
             <textarea class="form-control" name="message" rows="4" placeholder="Message" required></textarea>
-          </grammarly-editor-plugin>
+          <!-- </grammarly-editor-plugin> -->
         </div>
         <div class="my-3">
           <div class="loading">Loading</div>
@@ -906,7 +915,6 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="https://unpkg.com/@grammarly/editor-sdk?clientId=client_AX71v4manjthoo4fmN5dRP"></script>
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
   <script src="assets/vendor/jquery/jquery-3.6.0.js"></script>
   <script src="assets/vendor/purecounter/purecounter.js"></script>
