Updated Dev Skills,Minor UI Changes

--- a/index.html
+++ b/index.html
@@ -283,8 +283,32 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-braces-fill" style="color: #ffa76e;"></i>
-            <h3>API Integration/Rapid API</h3>
+            <i class="ri-html5-fill" style="color: #e45c01;"></i>
+            <h3>HTML</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-css3-fill" style="color: #0176e4;"></i>
+            <h3>CSS & SCSS</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-database-fill" style="color: #009708;"></i>
+            <h3>Mongoose Schema</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-window-fill" style="color: #00d9ff;"></i>
+            <h3>Vanilla JS</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-brackets-fill" style="color: #ffa76e;"></i>
+            <h3>Axios & API</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -314,7 +338,7 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-cloud-fill" style="color: #ff2882;"></i>
-            <h3>Axios</h3>
+            <h3>TailwindCSS</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -380,7 +404,7 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-terminal-box-fill" style="color: #80008b;"></i>
-            <h3>IT</h3>
+            <h3>IT & Gadgets</h3>
           </div>
         </div>
         <!-- <div class="col-lg-3 col-md-4 mt-4">
@@ -529,7 +553,7 @@
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Full Stack Web Development </h4>
+            <h4>Full Stack Development </h4>
             <h5>2022 - Present </h5>
             <p><em>BrotoType Kerala, Calicut,Kerala IN</em></p>
             <p>Mainly focused and learned by Open Material Education,
@@ -854,7 +878,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>contact@example.com</p>
+            <p>muzofficial90@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
