--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   ======================================================== -->
 </head>
 
-<body id="page" class="orange">
+<body id="page" class="blue">
 
   <!-- ======= Header ======= -->
   <header id="header">
@@ -61,12 +61,12 @@
       </nav><!-- .navbar -->
 
       <div id="navbar" class="customNav">
-        <a href="#header" class="nav-link active"><i class="bi bi-house-fill"></i></a>
-        <a href="#about" class="nav-link"> <i class="bi bi-file-person-fill"></i> </a>
-        <a href="#resume" class="nav-link"><i class="bi bi-sliders"></i></a>
-        <a href="#services" class="nav-link"><i class="bi-briefcase-fill"></i></a>
-        <a href="#portfolio" class="nav-link"><i class="bi-archive-fill"></i></a>
-        <a href="#contact" class="nav-link"><i class="bi-envelope-open-fill"></i></a>
+        <a href="#header" class="nav-link active"><i class="ri-home-line"></i></a>
+        <a href="#about" class="nav-link"> <i class="ri-information-line"></i> </a>
+        <a href="#resume" class="nav-link"><i class="ri-todo-line"></i></a>
+        <a href="#services" class="nav-link"><i class="ri-briefcase-line"></i></a>
+        <a href="#portfolio" class="nav-link"><i class="ri-pie-chart-line"></i></a>
+        <a href="#contact" class="nav-link"><i class="ri-link-m"></i></a>
       </div>
 
       <div class="social-links">
