Added Project Links

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
               <h4>mFlux</h4>
               <p>Project built while mastering ReactJS</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
+                <a href="https://mflux.netlify.app/" target="_blank" rel="noreferrer" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="mFlux"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -826,7 +826,7 @@
               <h4>mzaTodoApp</h4>
               <p>A simple & Powerful Todo App built from scratch using react & native css</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
+                <a href="https://mza-codes.github.io/TodoApp-mza/" target="_blank" rel="noreferrer" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="mzaTodoApp"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -842,7 +842,7 @@
               <h4>mFlux v2</h4>
               <p>A Newest version of mFlux built from scratch using Tailwindcss & React</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-10.png" data-gallery="portfolioGallery"
+                <a href="https://mflux.netlify.app/" target="_blank" rel="noreferrer" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="mFlux v2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -858,7 +858,7 @@
               <h4>mFlux v2</h4>
               <p>Homepage Sample screen</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-11.png" data-gallery="portfolioGallery"
+                <a href="https://mflux.netlify.app/" target="_blank" rel="noreferrer" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="mFlux v2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
